# app/Http/Controllers/BookMarkCategoryController.php
@@ -31,7 +31,7 @@ class BookMarkCategoryController extends Controller
     /**
      * @OA\Post(
      *      path="/api/v1/category",
-     *      tags={"BookmarkCategory"},
+     *      tags={"Category"},
      *      summary="카테고리 생성",
      *      description="카테고리 생성",
      *      operationId="store",
@@ -62,7 +62,7 @@ class BookMarkCategoryController extends Controller
     /**
      * @OA\Get(
      *      path="/api/v1/category",
-     *      tags={"BookmarkCategory"},
+     *      tags={"Category"},
      *      summary="카테고리 조회",
      *      description="카테고리 조회",
      *      operationId="show",
